--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Products#index</h1>
-<p>Find me in app/views/products/index.html.erb</p>
+
+
+
+<h1>Products</h1>
+<%= link_to "New Product", "/products/new" %>
+
+<% @products.each do |product| %>
+  <p>
+  	<%= product.name %> <br>
+  	<%= product.description %><br>
+  	<%= product.formatted_price %>
+  </p>
+<% end %>
