--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,13 +1,12 @@
 
-
-
 <h1>Products</h1>
 <%= link_to "New Product", "/products/new" %>
 
 <% @products.each do |product| %>
   <p>
-  	<%= product.name %> <br>
+  	<%= link_to "#{product.name}", "/products/#{product.id}" %><br>
   	<%= product.description %><br>
   	<%= product.formatted_price %>
+
   </p>
 <% end %>
