--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Products#show</h1>
-<%= @product.formatted_price %>
+<%= link_to "Back to Products", "/products" %> | <%= link_to "Edit", "/products/#{params[:id]}/edit" %>
+<h3><%= @product.name %> </h3>
+<p>
+	<%= @product.description %><br>
+	<%= @product.formatted_price %>
+</p>
