--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,5 @@
-<%= link_to "Back to Products", "/products" %> | <%= link_to "Edit", "/products/#{params[:id]}/edit" %>
+<%= link_to "Back to Products", "/products" %> | <%= link_to "Edit", "/products/#{params[:id]}/edit" %> | <%= link_to "Delete", product_path(@product), method: :delete, data: {confirm: "Are you sure you want to delete this product?"} %>
+
 <h3><%= @product.name %> </h3>
 <p>
 	<%= @product.description %><br>
