--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
+
 <html>
-<head>
-  <title>Rainforest</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-	<body>
+	<head>
+		<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,100,700' rel='stylesheet' type='text/css'>
+	  <title>Rainforest</title>
+	  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+	  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	  <%= csrf_meta_tags %>
+	</head >
+	<body id = "all_text">
 
 		<% if flash[:notice] %>
 	      <p id="notice"><%= flash[:notice] %></p>
