--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,12 +1,12 @@
 <%= link_to "Back to Products", "/products" %> | <%= link_to "Edit", "/products/#{params[:id]}/edit" %> | <%= link_to "Delete", product_path(@product), method: :delete, data: {confirm: "Are you sure you want to delete this product?"} %>
-
-<h3><%= @product.name %> </h3>
+<div class = "product_page">
+<h3 id = "product_title"><%= @product.name %> </h3>
 <p>
 	<%= @product.description %><br>
 	<%= @product.formatted_price %>
 </p>
 
-  <h3>Reviews for <%= @product.name %></h3>
+  <h4 id = "review_title">Reviews for <%= @product.name %></h4>
 
   <% @product.reviews.each do |review| %>
     <p>
@@ -47,3 +47,4 @@
 <% else %>
   <p>Please <%= link_to "log in", new_session_path %> to add a review.</p>
 <% end %>
+</div>
