--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,21 +8,18 @@
 
   <h4 id = "review_title">Reviews for <%= @product.name %></h4>
 
-  <% @product.reviews.each do |review| %>
-    <p>
-      <%= review.comment %>
-      <br>
-      <% if review.user != nil %>
-        <em> by <%= review.user.name %></em>
-        Added on: <%= review.created_at %>
-      <% end %>
-    </p>
-  <% end %>
+  <div id="review-list">
+    <%= render :partial => "reviews" %>
+  </div>
+
 
  <% if current_user %>
   <h4>New Review</h4>
 
-  <%= form_for([@product, @review]) do |f| %>
+  <%= form_for [@product, @review], :remote => true do |f| %>
+    <div id="review-form-errors">
+    <%= render :partial => "/products/review_form_errors" %>
+    </div>
     <% if @review.errors.any? %>
       <div id="error_explanation">
         <h2><%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:</h2>
@@ -48,3 +45,21 @@
   <p>Please <%= link_to "log in", new_session_path %> to add a review.</p>
 <% end %>
 </div>
+
+
+<script type="text/javascript">
+  $(function() {
+     $("#new_review")
+        .on('ajax:beforeSend', function() { // set this code to happen just before the ajax request is made
+          $("input[type='submit']") // make changes to the submit button
+            .val('Saving...') // change the text on the button
+            .attr('disabled', 'disabled'); // disable the button
+        })
+        .on('ajax:complete', function() {
+          $("input[type='submit']")
+            .val('Create Review')
+            .removeAttr('disabled');
+        });
+  });
+</script>
+
